--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,54 +1,36 @@
-<div class="col-3 col-md-4">
-  <a class="nav-link-dope navbar-toggler" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+<div class="col-auto col-md-4" id="navbar-left">
+  <a class="nav-link-dope d-inline d-md-none" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars icon"></i>
   </a>
   <div class="dropdown-menu navbar-dropdown color-2" aria-labelledby="navbar-dropdown">
-    <ul class="nav nav-fade d-block">
-      <!-- <li>
-        <a class="blog-link" href="#">
-          Blog
-        </a>
-      </li> -->
-      <li>
-        <a class="nav-link-dope browse-link" href="{% url 'browse' %}">
-          Browse
-        </a>
-      </li>
-      {% if user.is_authenticated %}
-      <li>
-        <a class="nav-link-dope subscriptions-link" href="{% url 'subscriptions' %}">
-          Subscriptions
-        </a>
-      </li>
-      <li>
-        <a class="nav-link-dope settings-link" href="{% url 'settings' %}">
-          Settings
-        </a>
-      </li>
-      {% endif %}
-    </ul>
-  </div>
-  <ul class="nav nav-fade">
-    <!-- <li>
-      <a class="blog-link d-none d-md-block" href="#">
-        Blog
-      </a>
-    </li> -->
-    <li>
-      <a class="nav-link-dope browse-link d-none d-md-block" href="{% url 'browse' %}">
-        Browse
-      </a>
-    </li>
+    <!-- <a class="blog-link" href="#">
+      Blog
+    </a> -->
+    <a class="nav-link-dope browse-link" href="{% url 'browse' %}">
+      Browse
+    </a>
     {% if user.is_authenticated %}
-    <li>
-      <a class="nav-link-dope subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
+      <a class="nav-link-dope subscriptions-link" href="{% url 'subscriptions' %}">
         Subscriptions
       </a>
-    </li>
+      <a class="nav-link-dope settings-link" href="{% url 'settings' %}">
+        Settings
+      </a>
     {% endif %}
-  </ul>
+  </div>
+  <!-- <a class="blog-link d-none d-md-inline" href="#">
+    Blog
+  </a> -->
+  <a class="nav-link-dope browse-link d-none d-md-inline" href="{% url 'browse' %}">
+    Browse
+  </a>
+  {% if user.is_authenticated %}
+    <a class="nav-link-dope subscriptions-link d-none d-md-inline" href="{% url 'subscriptions' %}">
+      Subscriptions
+    </a>
+  {% endif %}
 </div>
-<div class="col-6 col-md-4" id="logo" >
+<div class="col col-md-4" id="logo" >
   <a class="index-link" href="/">
     <span class="x a">
       d
@@ -73,42 +55,29 @@
     </span>
   </a>
 </div>
-<div class="col-3 col-md-4">
-  <ul class="nav nav-fade">
-    {% if user.is_authenticated %}
-    <li class="ml-auto">
-      <a class="nav-link-dope settings-link d-none d-md-block" href="{% url 'settings' %}">
-        Settings
-      </a>
-      <form class="logout-form d-block d-md-none" method="POST" action="{% url 'logout' %}">
-        {% csrf_token %}
-        <button class="nav-link-dope ajax-logout" type="submit">
-          <i class="fas fa-sign-out-alt icon"></i>
-        </button>
-      </form>
-    </li>
-    <li>
-      <form class="logout-form d-none d-md-block" method="POST" action="{% url 'logout' %}">
-        {% csrf_token %}
-        <button class="nav-link-dope ajax-logout" type="submit">
-          Logout
-        </button>
-      </form>
-    </li>
-    {% else %}
-    <li class="ml-auto">
-      <a class="nav-link-dope ajax-login d-none d-md-block" href="/">
-        Login
-      </a>
-    </li>
-    <li>
-      <a class="nav-link-dope ajax-signup d-none d-md-block" href="/?view=signup">
-        Signup
-      </a>
-      <a class="nav-link-dope ajax-login d-block d-md-none" href="/">
-        <i class="fas fa-sign-in-alt icon"></i>
-      </a>
-    </li>
-    {% endif %}
-  </ul>
+<div class="col-auto col-md-4"id="navbar-right">
+  {% if user.is_authenticated %}
+    <a class="nav-link-dope settings-link d-none d-md-inline" href="{% url 'settings' %}">
+      Settings
+    </a>
+    <form class="logout-form d-inline d-md-none" method="POST" action="{% url 'logout' %}">
+      {% csrf_token %}
+      <button class="nav-link-dope ajax-logout d-inline d-md-none" type="submit">
+        <i class="fas fa-sign-out-alt icon"></i>
+      </button>
+      <button class="nav-link-dope ajax-logout d-none d-md-inline" type="submit">
+        Logout
+      </button>
+    </form>
+  {% else %}
+  <a class="nav-link-dope ajax-login d-none d-md-inline" href="/">
+    Login
+  </a>
+  <a class="nav-link-dope ajax-signup d-none d-md-inline" href="/?view=signup">
+    Signup
+  </a>
+  <a class="nav-link-dope ajax-login d-inline d-md-none" href="/">
+    <i class="fas fa-sign-in-alt icon"></i>
+  </a>
+  {% endif %}
 </div>
