--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -39,7 +39,9 @@
           {% block center-stage %}
           {% endblock %}
           {% if splash %}
-            {% if user.is_authenticated %}
+            {% if episodes %}
+              {% include 'podinfo.html' %}
+            {% elif user.is_authenticated %}
               {% include 'dashboard.html' %}
             {% else %}
               {% include 'splash.html' %}
