--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -60,7 +60,7 @@
     <a class="nav-link-dope settings-link d-none d-md-inline" href="{% url 'settings' %}">
       Settings
     </a>
-    <form class="logout-form d-inline d-md-none" method="POST" action="{% url 'logout' %}">
+    <form class="logout-form" method="POST" action="{% url 'logout' %}">
       {% csrf_token %}
       <button class="nav-link-dope ajax-logout d-inline d-md-none" type="submit">
         <i class="fas fa-sign-out-alt icon"></i>
@@ -70,14 +70,14 @@
       </button>
     </form>
   {% else %}
-  <a class="nav-link-dope ajax-login d-none d-md-inline" href="/">
-    Login
-  </a>
-  <a class="nav-link-dope ajax-signup d-none d-md-inline" href="/?view=signup">
-    Signup
-  </a>
-  <a class="nav-link-dope ajax-login d-inline d-md-none" href="/">
-    <i class="fas fa-sign-in-alt icon"></i>
-  </a>
+    <a class="nav-link-dope ajax-login d-none d-md-inline" href="/">
+      Login
+    </a>
+    <a class="nav-link-dope ajax-signup d-none d-md-inline" href="/?view=signup">
+      Signup
+    </a>
+    <a class="nav-link-dope ajax-login d-inline d-md-none" href="/">
+      <i class="fas fa-sign-in-alt icon"></i>
+    </a>
   {% endif %}
 </div>
