--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -23,75 +23,69 @@
       </ul>
     </div>
   </div>
-  <form id="chart-form" method="GET" action="{% url 'charts' %}">
-    <div class="row options-select color-1" id="chart-selected-buttons" data-toggle="buttons">
-      {% if chart.genre %}
+  <div class="row options-select color-1 chart-selected-buttons">
+    {% if chart.genre %}
       <div class="col-auto ml-auto options-group">
-          <label class="btn btn-dope selected-button active">
-            <input class="field-button" type="checkbox" name="chart-selected-genre" value="{{ chart.genre }}" checked>
-            {{ chart.genre }}
-            <i class="fas fa-times-circle icon selected"></i>
-          </label>
-        </div>
-      {% endif %}
-      <div class="collapse chart-options-collapse" id="chart-genre-collapse">
-        <div class="options-group" id="chart-genre-buttons" data-toggle="buttons">
-          {% if chart.genre %}
-            <label class="btn btn-dope options-button">
-              <input class="field-button" type="radio" name="chart-genre" value="All">
-              All
-            </label>
+        <a class="btn btn-dope selected-button active" href="{% url 'charts' %}">
+          {{ chart.genre }}
+          <i class="fas fa-times-circle icon selected"></i>
+        </a>
+      </div>
+    {% endif %}
+    <div class="collapse chart-options-collapse" id="chart-genre-collapse">
+      <div class="options-group chart-genre-buttons">
+        {% if chart.genre %}
+        <a class="btn btn-dope options-button" href="{% url 'charts' %}">
+          All
+        {% endif %}
+        {% for genre in chart_genres %}
+          {% if not chart.genre == genre.name %}
+            <a class="btn btn-dope options-button" href="{% url 'charts' %}?genre={{ genre.url_format }}">
+              {{ genre.name }}
+            </a>
           {% endif %}
-          {% for genre in chart_genres %}
-            {% if not chart.genre == genre.name %}
-              <label class="btn btn-dope options-button">
-                <input class="field-button" type="radio" name="chart-genre" value="{{ genre.name }}">
-                {{ genre.name }}
-              </label>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  <div class="row results-wrapper">
+    <div class="col">
+      <div class="row results-content">
+        <div class="col">
+          {% for podcast in chart.sorted_podcasts %}
+            <div class="row">
+              <div class="col-auto">
+                {% if chart.genre %}
+                  {{ podcast.genre_rank }}
+                {% else %}
+                  {{ podcast.global_rank }}
+                {% endif %}
+              </div>
+              <div class="col-auto">
+                <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
+                  <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
+                </a>
+              </div>
+              <div class="col">
+                <h6 class="result-title">
+                  <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
+                    {{ podcast.title }}
+                  </a>
+                </h6>
+                <p class="result-artist">
+                  <span>by </span>
+                  <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
+                    {{ podcast.artist }}
+                  </a>
+                </p>
+              </div>
+            </div>
+            {% if not forloop.last %}
+              <hr class="h-line" />
             {% endif %}
           {% endfor %}
         </div>
       </div>
     </div>
-    <div class="row results-wrapper">
-      <div class="col">
-        <div class="row results-content">
-          <div class="col">
-            {% for podcast in chart.sorted_podcasts %}
-              <div class="row">
-                <div class="col-auto">
-                  {% if chart.genre %}
-                    {{ podcast.genre_rank }}
-                  {% else %}
-                    {{ podcast.global_rank }}
-                  {% endif %}
-                </div>
-                <div class="col-auto">
-                  <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}">
-                    <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}100x100bb.jpg&w=100&h=100&t=absolute" />
-                  </a>
-                </div>
-                <div class="col">
-                  <h6 class="result-title">
-                    <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.title }}">
-                      {{ podcast.title }}
-                    </a>
-                  </h6>
-                  <p class="result-artist">
-                    <span>by </span>
-                    <a class="show-podinfo" data-itunesid="{{ podcast.itunesid }}" href="{% url 'podinfo' itunesid=podcast.itunesid %}" title="{{ podcast.artist }}">
-                      {{ podcast.artist }}
-                    </a>
-                  </p>
-                </div>
-              </div>
-              {% if not forloop.last %}
-                <hr class="h-line" />
-              {% endif %}
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-    </div>
-  </form>
+  </div>
 </div>
